force-app/main/default/objects/AA_Business_Branch__c/AA_Business_Branch__c.object-meta.xml
<CustomObject>
    <label>AA Business Branch</label>
    <nameField>
        <label>AA Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AA Business Branch</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>