force-app/main/default/objects/AA_Business_Branch__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Ej: Av. Brasil 2377, apto 1803 · Pocitos. Edificio entre Araucho y Ponce</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>